Uploaded image for project: 'Axis2-C'
  1. Axis2-C
  2. AXIS2C-812

guththila parser fails attempting to deallocate unallocated cell if xml message contains more than one namespace

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 1.3.0
    • guththila
    • None
    • Windows, Visual Studio 2005, guththila validating parser

    Description

      The guththila validating parser fails attempting to deallocate an unallocated cell if the xml message constains more than one namespace. The issue is that the validating parser allocates one cell of memory to hold an array of namespaces, but that the code that frees the namespaces believes that each array element is a separate cell. Thus, if the array contains more than one element, the free of the second element fails.

      One can see the problem when parsing a SOAP response message identifying two namespaces, e.g., one that begins:
      <?xml version="1.0" encoding="UTF-8" ?>

      • <env:Envelope xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:env="http://schemas.xmlsoap.org/soap/envelope/">
      • <env:Body>
        ...

      This appears to be a problem introduced as part of fix AXIS2C-785 since 1.1.0 in the development branch; in 1.1.0 the array was not freed at all.

      Attachments

        1. guththila_xml_parser_diff_2
          8 kB
          Bill Mitchell
        2. guththila_xml_parser_diff
          8 kB
          Bill Mitchell

        Activity

          People

            Unassigned Unassigned
            wtmitchell3 Bill Mitchell
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: