Patch applied with minor modifications for AXIS2C-812. Also done few code formatings